k8s/appsrv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appsrv
  namespace: demo
  labels:
    app: jee
spec:
  replicas: 1
  selector:
    matchLabels:
      component: appsrv
  template:
    metadata:
      labels:
        component: appsrv
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: appsrv
          image: registry.l.aberger.at/caberger/appsrv:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: appsrv
      imagePullSecrets:
        - name: leocloudcredentials
