k8s/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: demo
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
