k8s/deployment copy.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox1
  namespace: demo
  labels:
    name: busybox
spec:
  hostname: busybox-1
  subdomain: default-subdomain
  containers:
  - image: busybox:1.28
    command:
      - sleep
      - "3600"
    name: busybox
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jee
  namespace: demo
  labels:
    app: jee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jee
  template:
    metadata:
      labels:
        app: jee
    spec:
      containers:
      - name: appsrv
        image: registry.l.aberger.at/caberger/appsrv:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: appsrv
      - name: mysql
        image:  mysql:8
        imagePullPolicy: Always
        ports:
          - containerPort: 3306
            name: mysql
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-storage
      - name: nginx
        image: nginx:stable
        imagePullPolicy: Always        
        ports:
          - containerPort: 80
            hostPort: 80
            name: http
        volumeMounts:
          - name: nginx-conf
            mountPath: /etc/nginx
            readOnly: true
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-data
        - name: nginx-conf
          configMap:
            name: nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
            items:
              - key: nginx.conf
                path: nginx.conf
      imagePullSecrets:
        - name: leocloudcredentials
