k8s/deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  namespace: demo
  labels:
    name: jee
spec:
  containers:
  - image: mysql:8
    name: mysql
    ports:
      - containerPort: 3306
        name: mysql
    volumeMounts:
      - mountPath: /var/lib/mysql
        name: mysql-storage
  volumes:
    - name: mysql-storage
      persistentVolumeClaim:
        claimName: mysql-data
---
apiVersion: v1
kind: Pod
metadata:
  name: appsrv
  namespace: demo
  labels:
    name: jee
spec:
  containers:
  - image: registry.l.aberger.at/caberger/appsrv:latest
    name: appsrv
    ports:
      - containerPort: 8080
        name: http
  imagePullSecrets:
    - name: leocloudcredentials
