k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: demo
  labels:
    app: jee
spec:
  selector:
    app: jee
  ports:
    - protocol: TCP
      name: mysql
      port: 3306
      targetPort: 3306
